# learnault-contracts

./: Cargo.toml
.github/workflows/: ci.yml
contracts/: Cargo.toml  README.md
contracts/course-registry/: Cargo.toml
contracts/course-registry/src/: lib.rs  test.rs  types.rs
contracts/course-registry/test_snapshots/test/: test_course_count_increments.1.json  test_course_created_event_emitted.1.json  test_create_course_returns_id_one.1.json  test_unauthorized_admin_panics.1.json  test_zero_modules_panics.1.json
